Codec for Quicktime cannot be chosen. Renders using jpeg codec #34390

Closed
opened 2013-02-23 21:55:38 +01:00 by Greg Porter · 4 comments

%%%--- Operating System, Graphics card ---
OSX 10.6.8, ATI Radeon HD 2400

- Blender version with error, and version that worked ---

Version 2.66 has error, version 2.65a worked

- Short description of error ---

Selecting Quicktime for render output shows blank Video Codec field. When Video Codec field is clicked, options are displayed in single row across screen but nothing can be selected. Rendering results in Quicktime movie file with JPEG codec.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Select render tab. Switch output from default PNG to Quicktime. Try selecting codec.

%%%

%%%--- Operating System, Graphics card --- OSX 10.6.8, ATI Radeon HD 2400 - Blender version with error, and version that worked --- Version 2.66 has error, version 2.65a worked - Short description of error --- Selecting Quicktime for render output shows blank Video Codec field. When Video Codec field is clicked, options are displayed in single row across screen but nothing can be selected. Rendering results in Quicktime movie file with JPEG codec. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Select render tab. Switch output from default PNG to Quicktime. Try selecting codec. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%We have another (unconfirmed) bug report about it. It seems to be related to if you have a 32 bits system?%%%

%%%We have another (unconfirmed) bug report about it. It seems to be related to if you have a 32 bits system?%%%

%%%Fix in svn now, I managed to redo this. It was caused by accessing invalid memory so probably it's quite random when it happens.%%%

%%%Fix in svn now, I managed to redo this. It was caused by accessing invalid memory so probably it's quite random when it happens.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34390
No description provided.