Fix #34390: quicktime video codec menu showing blank. It's a small miracle that this code worked at all at some point.